--- a/Danji/Base.lproj/Main.storyboard
+++ b/Danji/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="LH0-T9-u1S">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="LH0-T9-u1S">
                                 <rect key="frame" x="66" y="99" width="89" height="82"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DANJI" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3u-cs-Ik9">
@@ -428,7 +428,7 @@
                             <rect key="frame" x="115" y="6" width="90" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="danji.png" translatesAutoresizingMaskIntoConstraints="NO" id="qUK-nR-FMs">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="danji" translatesAutoresizingMaskIntoConstraints="NO" id="qUK-nR-FMs">
                                     <rect key="frame" x="-4" y="-5" width="50" height="45"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DANJI" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h31-G2-YKM">
@@ -1033,14 +1033,14 @@
     </scenes>
     <resources>
         <image name="cancel" width="25" height="25"/>
-        <image name="danji.png" width="48" height="48"/>
+        <image name="danji" width="48" height="48"/>
         <image name="home" width="24" height="24"/>
-        <image name="launch.png" width="180" height="164"/>
+        <image name="launch" width="180" height="164"/>
         <image name="search" width="24" height="24"/>
         <image name="write.png" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pUH-sk-lcG"/>
+        <segue reference="n1A-cF-LnQ"/>
         <segue reference="Hbo-bP-cNO"/>
         <segue reference="NTQ-fp-XM9"/>
     </inferredMetricsTieBreakers>
