--- a/Danji/Base.lproj/Main.storyboard
+++ b/Danji/Base.lproj/Main.storyboard
@@ -1036,7 +1036,7 @@
         <image name="write.png" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="n1A-cF-LnQ"/>
+        <segue reference="Gbh-J8-wgn"/>
         <segue reference="1aq-4J-dH9"/>
         <segue reference="cc1-WK-hZG"/>
     </inferredMetricsTieBreakers>
